# scorbot_ws

./: .gitignore
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: JointTarget.srv
src/error_calculator/: package.xml  setup.cfg  setup.py
src/error_calculator/error_calculator/: error_calculator.py
src/maker_follower/: package.xml  setup.cfg  setup.py
src/maker_follower/maker_follower/: marker.py
src/pico_scorbot_control/: CMakeLists.txt  package.xml  pico_scorbot_control.xml
src/pico_scorbot_control/include/pico_scorbot_control/: pico_comms.h  pico_scorbot_control.hpp  visibility_control.h
src/pico_scorbot_control/src/: pico_comms.cpp  pico_scorbot_control.cpp
src/pico_scorbot_control/test/: test_pico_scorbot_control.cpp
src/pose_publisher/: package.xml  setup.cfg  setup.py
src/pose_publisher/pose_publisher/: pose_publisher.py
src/py_serial/: package.xml  setup.cfg  setup.py
src/py_serial/py_serial/: pyserial.py
src/scorbot_er_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/scorbot_er_moveit_config/config/: fake_controllers.yaml  gazebo_scorbot-er-v-plus.urdf  joint_limits.yaml  ompl_planning.yaml  scorbot-er-v-plus.srdf
src/scorbot_er_v/: package.xml  setup.cfg  setup.py
src/scorbot_er_v/config/: scorbot_er_v_controllers.yaml  view_robot.rviz
src/scorbot_er_v/launch/: display.launch.py  gazebo.launch.py
src/scorbot_er_v/meshes/: base_link.STL  roll_wrist_link.STL
src/scorbot_er_v/meshes-wo-extruder/: body_link.STL  wrist_link.STL
src/scorbot_er_v/urdf/: scorbot_printer-extrudr.urdf  scorbot_printer.urdf
src/scorbot_move_client/: package.xml  setup.cfg  setup.py
src/scorbot_move_client/scorbot_move_client/: extract_from_gcode.py  scorbot_move_client.py
src/serial_publisher/: package.xml  setup.cfg  setup.py
src/serial_publisher/serial_publisher/: serial_publisher.py
